Fix repository card alignment

--- a/app/repositories/Repository/Repository.module.scss
+++ b/app/repositories/Repository/Repository.module.scss
@@ -6,7 +6,7 @@
   position: relative;
   overflow: hidden;
   min-height: 116px;
-  flex-direction: row;
+  flex-direction: row !important;
   justify-content: space-between;
 
   .info {
